application.properties 내 변수 .env 활용.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.property-naming-strategy=SNAKE_CASE
 
-ks.app-key=''
-ks.app-secret=''
-ks.account-number=''
-ks.account-product-code=''
+spring.config.import=optional:file:.env[.properties]
+
+ks.app-key=${KS_APP_KEY}
+ks.app-secret=${KS_APP_SECRET}
+ks.account-number=${KS_ACCOUNT_NUMBER}
+ks.account-product-code=${KS_ACCOUNT_PRODUCT_CODE}
