--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=backend
 
-spring.docker.compose.enabled=false
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.url=jdbc:postgresql://db:5432/postgres-db
 spring.datasource.username=user
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
