--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,8 +18,8 @@ http {
     root /usr/share/nginx/html;
     index index.html;
 
-    location /api {
-        proxy_pass http://backend:8080/;
+    location /api/ {
+        proxy_pass http://backend:8080/api/;
     }
 
     location / {
