--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,34 @@
 spring.application.name=backend
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/db
-spring.datasource.url=jdbc:postgresql://db:5432/postgres-db
-spring.datasource.username=user
-spring.datasource.password=1234
+# 데이터베이스 설정 (환경변수 사용)
+spring.datasource.url=${DB_URL:jdbc:postgresql://db:5432/postgres-db}
+spring.datasource.username=${DB_USERNAME:user}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
 
 spring.config.import=optional:file:.env[.properties]
 
+# 검증 설정
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+# 한국투자증권 API 설정 (환경변수 사용)
 ks.app-key=${KS_APP_KEY}
 ks.app-secret=${KS_APP_SECRET}
 ks.account-number=${KS_ACCOUNT_NUMBER}
 ks.account-product-code=${KS_ACCOUNT_PRODUCT_CODE}
+
+# 서버 설정
+server.port=${SERVER_PORT:8080}
+
+# 프로파일 설정
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+# 보안 설정
+server.error.include-message=on_param
+server.error.include-binding-errors=on_param
+
+# 로깅 설정
+logging.level.com.billionaire=${LOG_LEVEL:INFO}
+logging.level.root=${ROOT_LOG_LEVEL:WARN}
