예외 처리 메시지 단순화 및 환경 설정 정리.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   db:
     image: postgres:latest
-    container_name: postgres-db
+    container_name: billionaire_db
     ports:
       - "5432:5432"
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: 1234
-      POSTGRES_DB: postgres-db
+      POSTGRES_DB: billionaire_db
 
   backend:
     build:
