--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=backend
 
-# 데이터베이스 설정 (환경변수 사용)
-spring.datasource.url=${DB_URL:jdbc:postgresql://db:5432/postgres-db}
+spring.datasource.url=${DB_URL:jdbc:postgresql://db:5432/billionaire_db}
 spring.datasource.username=${DB_USERNAME:user}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
